--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -147,8 +147,9 @@ nav {
 .mobile-menu-icon {
    color: black; 
    fill: black; 
-   /* justify-content: flex-end;
-   display: flex; */
+   justify-content: flex-end;
+   display: flex;
+   font-size: 55px;
 } 
 
 /* @media screen and (max-width: 780px) {
